--- a/fig_plis/article_SI.tex
+++ b/fig_plis/article_SI.tex
@@ -81,7 +81,7 @@ Extracting the top and bottom surface of the gel phase allows for quantitative m
 
 The primary, secondary and tertiary patterns follow the same path: the birth of an instability of wavelength $\lambda$ of growing amplitude $A(t)$ until saturation to $A_\text{max}$, see Figure~\ref{fig:sideview}a. Throughout the whole process, $\lambda$ remains constant. This path is dynamic in essence. In Figure~\ref{fig:sideview}d, we thus report the velocity $v(t)$ of the wrinkles as it develops in the $z$-direction, see Supplementary Methods for the definition. We observe that the velocity peaks at different times corresponding to syn\ae{}resis and to the respective growths of the primary, secondary and tertiary patterns. We associate each growth with a characteristic time $\tau = A_\text{max}/v_\text{max}$. For example, in the present case the $\tau$ corresponding to the primary pattern is $\SI{123}{\second}$.
 
-Therefore contrary to observations in, e.g., Ref~\cite{Yoo2003}, we do not report any coarsening of the patterns. We believe the wrinkling pattern is stable against coarsening because of the bending rigidity of the gel~\cite{LeGoff2014}. Indeed when the amplitude saturates the gel flattens against the walls which creates sharp edges. To accommodate those sharp edges with finite bending rigidity, the flat part of the gel actually ripples, see Supplementary Figure~\ref{fig:ripples}. The ripples created by opposite sides of a same flat patch interfere, creating barriers against coarsening~\cite{LeGoff2014}.
+Therefore contrary to observations in, e.g., Ref~\cite{Yoo2003}, we do not report any coarsening of the patterns. We believe that the wrinkling pattern is stable against coarsening because of the bending rigidity of the gel~\cite{LeGoff2014}. Indeed when the amplitude saturates the gel flattens against the walls which creates sharp edges. To accommodate those sharp edges with finite bending rigidity, the flat part of the gel actually ripples, see Supplementary Figure~\ref{fig:ripples}. The ripples created by opposite sides of a same flat patch interfere, creating barriers against coarsening~\cite{LeGoff2014}.
 
 
 \begin{figure}
@@ -107,7 +107,7 @@ The binding of a longitudinal edge to a rigid substrate can induce wrinkles upon
 %
 Finally as the four side boundaries remain fixed $\sigma_{\perp}$ cannot come from the resistance to uniaxial stretching~\cite{Cerda2003}.
 
-Therefore at this stage, our observations still raise two unresolved issues which we adress in the next sections: (i) what triggers the the spontaneous syn\ae{}resis and swelling back processes? And (ii) what is the nature of $\sigma_{\perp}$ responsible for the selection of the primary wavelength?
+Therefore at this stage, our observations still raise two unresolved issues which we address in the next sections: (i) what triggers the the spontaneous syn\ae{}resis and swelling back processes? And (ii) what is the nature of $\sigma_{\perp}$ responsible for the selection of the primary wavelength?
 
 \begin{figure*}
 \includegraphics{dilation.pdf}
@@ -166,7 +166,7 @@ The determination of the characteristic length $\lambda$ of a wrinkling pattern 
 %L. Landau and E.M. Lifshitz, Theory of Elasticity (Pergamon, New York, 1986), 3rd ed.
 
 This framework has been successfully applied to situations where $\sigma_{\perp}$ comes from the resistance of an elastic substrate ~\cite{Gough1940, Bijlaard1946}. Dealing only with (semi)infinite substrates, Biot generalised the elasticity of both the film and the substrate to viscoelasticity~\cite{Biot1957} or poroelasticity~\cite{Biot1964}, leading to time-dependent kinetic wavelength selection. Furthermore, it was shown that equation~(\ref{eq:lstar}) remains valid even when $\sigma_{\perp}$ comes from the resistance to uniaxial stretching~\cite{Cerda2003}, from gravity~\cite{Smoluchowski1910, Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013}, from boundaries~\cite{Vandeparre2011a, Li2013} or from adhesion~\cite{Vella2009a}. However, we have excluded these various origins for $\sigma_{\perp}$ in the discussion around Figure~\ref{fig:dilation}.
-
+%
 The only possible explanation left for $\sigma_{\perp}$ involve hydrodynamic stresses due to viscous flow of the solvent, either through the gel porous matrix itself or in the surrounding solvent layers.
 
 
@@ -263,7 +263,7 @@ Correspondence and requests for materials should be addressed to TG (\href{mailt
 \newpage
 \setcounter{figure}{0}
 
-\section*{Supplementary material}
+\section*{Supplementary materials}
 
 \subsection*{Wavelength measurements}
 
