Results and discussion avec 4 subsections

--- a/fig_plis/article_SI.tex
+++ b/fig_plis/article_SI.tex
@@ -38,8 +38,8 @@ Third, taking into account both Darcy flow through the gel and Poiseuille flow i
 
 \maketitle
 
-\paragraph*{Significance statement}
-Confined thin surfaces may wrinkle due the growth of an excess of material. Here we present benchmark experiments that explore the possibility of wrinkling in biogels. We relate the excess area to the microstructural dynamics of the biogel. Usually the wrinkling wavelength is set by elasticity or gravity. In our case the wavelength is controlled by viscous flow, either in a lubrication layer or through the pores of the gel. Our results pave the way for exploring the possibility of wrinkling in porous soft materials floating in a liquid such as biological tissues: during morphogenesis of the embryo the development of confined permeable and wrinkled surface is ubiquitous.
+%\paragraph*{Significance statement}
+%Confined thin surfaces may wrinkle due the growth of an excess of material. Here we present benchmark experiments that explore the possibility of wrinkling in biogels. We relate the excess area to the microstructural dynamics of the biogel. Usually the wrinkling wavelength is set by elasticity or gravity. In our case the wavelength is controlled by viscous flow, either in a lubrication layer or through the pores of the gel. Our results pave the way for exploring the possibility of wrinkling in porous soft materials floating in a liquid such as biological tissues: during morphogenesis of the embryo the development of confined permeable and wrinkled surface is ubiquitous.
 
 \section*{Introduction}
 
@@ -69,7 +69,9 @@ Finally we show that the wavelength is selected by a purely viscous mechanism co
 	\label{fig:dynamics}%
 \end{figure}
 
-\section*{Dynamics of the wrinkling process}
+\section*{Results and discussion}
+
+\subsection*{Dynamics of the wrinkling process}
 
 To form a biogel we start from an aqueous dispersion of caseins and glucono-$\delta$-lactone (GDL). GDL slowly acidifies the medium and triggers gelation of the caseins~\cite{Roefs1986,Bremer1989,Lucey1998,Dickinson2002}. While still liquid, this yoghurt-forming suspension is injected into a home-made optical cell, as sketched in Figure~\ref{fig:dynamics}a. The cell is sealed and no external stimulus is applied during gelation or pattern formation. Both top and bottom walls are coated with acrylamide brushes, effectively turning off the casein adhesion, so that the gel is only anchored to the remaining four vertical sides of the cell.
 
@@ -115,7 +117,7 @@ Therefore at this stage, our observations still raise two unresolved issues whic
 \label{fig:dilation}
 \end{figure*}
 
-\section*{Syn\ae{}resis and swelling back mechanism}
+\subsection*{Syn\ae{}resis and swelling back mechanism}
 
 \begin{figure}
 	\includegraphics{acidification}%
@@ -145,7 +147,7 @@ Therefore, the syn\ae{}resis and swelling back mechanism is related to charge st
 
 
 
-\section*{Wavelength selection mechanism}
+\subsection*{Wavelength selection mechanism}
 
 \begin{figure}
 \includegraphics{sketch_Darcy_Poiseuille.pdf}
@@ -200,7 +202,7 @@ The characteristic time $\tau$ is the hallmark of the kinetic nature of the wave
 
 To sum up, we expect two regimes of viscosity-dominated wrinkling: for $H\ll H^*$, i.e. slow destabilisation of a highly permeable film close to a wall, the main dissipation mechanism being the flow through the porous film; whereas for $H\gg H^*$, i.e. fast wrinkling of a poorly permeable film far from any wall, the flow in the viscous layers dominates and sets the wavelength.
 
-\section*{Experimental tests}
+\subsection*{Experimental tests}
 
 For a typical gel sheet, the buoyancy after syn\ae{}resis is estimated from the initial sodium caseinate mass concentration $C_\text{cas}$ as $\Delta\rho=C_\text{cas} e/h = \SI{130}{\kilo\gram\per\cubic\metre}$ leading to a gravity stress $\sigma_\perp^G \approx \SI{0.04}{\pascal}$. This is much lower than typical Darcy or Poiseuille stresses $\sigma_\perp^D \approx \sigma_\perp^P \approx \SI{0.15}{\pascal}$ which confirms that gravity can be neglected as already inferred from test experiments where the cell is held vertically rather than horizontally.
 
@@ -222,7 +224,7 @@ To conclude we have taken advantage of the properties of the casein protein to e
 
 %role of gravity
 
-\section*{Methods summary}
+\section*{Materials and Methods}
 
 Sodium caseinate (Firmenich) is dissolved in deionised water by stirring for \SI{20}{\minute} at room temperature. The mixing of the caseine dispersion with glucono-$\delta$-lactone (GDL) in powder (Firmenich) sets the beginning of the experiments. We typically have about \SI{10}{\minute} to pipet the dispersion into the slit before gelation starts. Sodium caseinate (Firmenich) is labelled with Dylight~550 NHS ESTER (Thermo Scientific). Excess dye is removed by centrifugation. For confocal microscopy measurements, we add 10\% of fluorescently labelled caseins to the casein/GDL dispersion while it is fluid.
 
