Typos, répétitions Methods -> Materials and Methods Supplementary Methods -> Supplementary Materials

--- a/fig_plis/article_SI.tex
+++ b/fig_plis/article_SI.tex
@@ -31,9 +31,9 @@ amsmath,amssymb,prl]{revtex4-1}
 \begin{abstract}
 Confined thin surfaces may wrinkle due the growth of an excess of material. Usually the wavelength is set by elasticity or gravity, but here we explore new selection mechanisms based on hydrodynamics.
 First, inspired by yoghurt-making processes, we use caseins, a family of milk proteins, as pH-responsive building blocks and the acidulent glucono-$\delta$-lactone, to design a porous biogel film immersed in a confined buoyancy-matched viscous medium.
-Provided specific boundary conditions the biogel film spontaneously wrinkles in cascade.
+Provided specific boundary conditions, but without any external stimulus, the biogel film spontaneously wrinkles in cascade.
 Second, using a combination of titration, rheology, light microscopy and confocal microscopy, we demonstrate that, during continuous acidification, the gel first shrinks and then swells, inducing wrinkling. 
-Third, taking into account both Darcy flow through the gel and Poiseuille flow in the surrounding solvent, we develop a model that predicts correctly the wrinkling wavelength. Our results should be universal for acid-induced protein gels as they are based on pH-induced charge stabilisation/destabilisation. As such our results could set a benchmark to gain fundamental insights into wrinkled biological tissues, to texture food or to design surfaces for optical purposes.
+Third, taking into account both Darcy flow through the gel and Poiseuille flow in the surrounding solvent, we develop a model that predicts correctly the wrinkling wavelength. Our results should be universal for acid-induced protein gels as they are based on pH-induced charge stabilisation/destabilisation, and therefore could set a benchmark to gain fundamental insights into wrinkled biological tissues, to texture food or to design surfaces for optical purposes.
 \end{abstract}
 
 \maketitle
@@ -56,10 +56,10 @@ Yet, benchmark experiments that explore the possibility of wrinkling in confined
 
 Here, we introduce model permeable biogels that produce hierarchical wrinkling as a result of their interplay between their gelation dynamics and the confinement conditions. 
 As a biogel, we use a simplified yoghurt obtained by the slow acidification of caseins, a family of milk proteins~\cite{Roefs1986,Bremer1989,Lucey1998,Dickinson2002}. While still liquid, the casein dispersion is injected in a home-made optical cell that is then sealed. This cell is designed such that the casein adhesion to both top and bottom walls is turned off and so that the gel is only anchored to the remaining four vertical sides of the cell.
-
+%
 Although no external stimulus is exerted on the system, we observe the spontaneous formation of a wrinkling pattern, as shown in Figure~\ref{fig:dynamics} and Supplementary Videos~\ref{vid:transmitted} and \ref{vid:reconstructed}. This pattern shows unique properties: a primary pattern appears simultaneously throughout the system with a wavelength $\lambda$  that is much smaller than the cell width $L$ and does not evolve with time. Furthermore, within this primary pattern, secondary and ternary patterns appear in cascade.
 Using a combination of titration, rheology, light microscopy and confocal microscopy, we demonstrate that the wrinkles at the millimetre scale result from the spontaneous swelling of the casein network at the micron level upon acidification.
-
+%
 Finally we show that the wavelength is selected by a purely viscous mechanism combining porous Darcy flow and viscous Poiseuille flow. We systematically checked that this combined model pins down the dynamical origin of the constraints exerted on the gel and nicely predicts the wrinkling wavelength under a wide range of conditions.
 
 
@@ -75,13 +75,13 @@ Finally we show that the wavelength is selected by a purely viscous mechanism co
 
 To form a biogel we start from an aqueous dispersion of caseins and glucono-$\delta$-lactone (GDL). GDL slowly acidifies the medium and triggers gelation of the caseins~\cite{Roefs1986,Bremer1989,Lucey1998,Dickinson2002}. While still liquid, this yoghurt-forming suspension is injected into a home-made optical cell, as sketched in Figure~\ref{fig:dynamics}a. The cell is sealed and no external stimulus is applied during gelation or pattern formation. Both top and bottom walls are coated with acrylamide brushes, effectively turning off the casein adhesion, so that the gel is only anchored to the remaining four vertical sides of the cell.
 
-The dynamics of the pattern formation are followed by light transmission microscopy and confocal microscopy, see Methods. As shown in Figure~\ref{fig:dynamics}b and Supplementary Video~\ref{vid:transmitted}, we observe the spontaneous formation of a first pattern that appears with a characteristic wavelength $\lambda\ll L$. The 2D shape and size of this primary pattern are set as soon as the pattern forms and do not evolve in time. However inside the primary pattern a secondary pattern emerges, inside which a ternary forms. At each step of this Russian dolls-like cascade, the wavelength is divided by two, as shown in Supplementary Figure~\ref{fig:generations}.
+The dynamics of the pattern formation are followed by light transmission microscopy and confocal microscopy, see Materials and Methods. As shown in Figure~\ref{fig:dynamics}b and Supplementary Video~\ref{vid:transmitted}, we observe the spontaneous formation of a first pattern that appears with a characteristic wavelength $\lambda\ll L$. The 2D shape and size of this primary pattern are set as soon as the pattern forms and do not evolve in time. However inside the primary pattern a secondary pattern emerges, inside which a ternary forms. At each step of this Russian dolls-like cascade, the wavelength is divided by two, as shown in Supplementary Figure~\ref{fig:generations}.
 
 3D confocal microscopy, as shown in Figure~\ref{fig:dynamics}c and Supplementary Video~\ref{vid:reconstructed}, reveals that those patterns actually correspond to wrinkles of the biogel film. Figure~\ref{fig:sideview}a shows successive side views of the same confocal measurements as in  Figure~\ref{fig:dynamics}c, see also Supplementary Videos~\ref{vid:cutDarcy} and \ref{vid:cutPoiseuille}. Initially the dispersion is homogeneous and fills the entire slit. The black margins in Figure~\ref{fig:sideview}a correspond to the glass walls. Around \SI{23}{\minute}, the gel forms and simultaneously becomes thinner and more concentrated --the fluorescence signal which is proportional to the casein concentration is brighter compared to the initial situation. This effect is the fingerprint of syn\ae{}resis: as gelation proceeds, solvent is expelled through both the upper and lower sides of the gel film.
 
-Extracting the top and bottom surface of the gel phase allows for quantitative measurements of the relative volume, Figure~\ref{fig:sideview}b, and excess surface area of the gel film, Figure~\ref{fig:sideview}c, see Supplementary Methods. The evolution of the gel volume is surprisingly non-monotonous. After reaching a minimum around 35\% of its initial value at \SI{23}{\minute}, the volume increases. Shortly after, at \SI{36}{\minute}, the planar film destabilises and starts to wrinkle in the $z$-direction creating excess area. This confirms that the instability leading to the primary pattern is due to swelling. Around \SI{38}{\minute}, the amplitude of the wrinkles reaches the thickness of the slit. As swelling continues, the gel flattens on both top and bottom walls (\SI{44}{\minute}) and finally buckles back (\SI{53}{\minute}) to form the secondary pattern (\SI{1}{\hour}21). When the excess area saturates, the dynamics stop (\SI{3}{\hour}). We note that at any given point in time the thickness $h$ of the film of gel is spatially homogeneous.
+Extracting the top and bottom surface of the gel phase allows for quantitative measurements of the relative volume, Figure~\ref{fig:sideview}b, and excess surface area of the gel film, Figure~\ref{fig:sideview}c, see Supplementary Materials. The evolution of the gel volume is surprisingly non-monotonous. After reaching a minimum around 35\% of its initial value at \SI{23}{\minute}, the volume increases. Shortly after, at \SI{36}{\minute}, the planar film destabilises and starts to wrinkle in the $z$-direction creating excess area. This confirms that the instability leading to the primary pattern is due to swelling. Around \SI{38}{\minute}, the amplitude of the wrinkles reaches the thickness of the slit. As swelling continues, the gel flattens on both top and bottom walls (\SI{44}{\minute}) and finally buckles back (\SI{53}{\minute}) to form the secondary pattern (\SI{1}{\hour}21). When the excess area saturates, the dynamics stop (\SI{3}{\hour}). We note that at any given point in time the thickness $h$ of the film of gel is spatially homogeneous.
 
-The primary, secondary and tertiary patterns follow the same path: the birth of an instability of wavelength $\lambda$ of growing amplitude $A(t)$ until saturation to $A_\text{max}$, see Figure~\ref{fig:sideview}a. Throughout the whole process, $\lambda$ remains constant. This path is dynamic in essence. In Figure~\ref{fig:sideview}d, we thus report the velocity $v(t)$ of the wrinkles as it develops in the $z$-direction, see Supplementary Methods for the definition. We observe that the velocity peaks at different times corresponding to syn\ae{}resis and to the respective growths of the primary, secondary and tertiary patterns. We associate each growth with a characteristic time $\tau = A_\text{max}/v_\text{max}$. For example, in the present case the $\tau$ corresponding to the primary pattern is $\SI{123}{\second}$.
+The primary, secondary and tertiary patterns follow the same path: the birth of an instability of wavelength $\lambda$ of growing amplitude $A(t)$ until saturation to $A_\text{max}$, see Figure~\ref{fig:sideview}a. Throughout the whole process, $\lambda$ remains constant. This path is dynamic in essence. In Figure~\ref{fig:sideview}d, we thus report the velocity $v(t)$ of the wrinkles as it develops in the $z$-direction, see Supplementary Materials for the definition. We observe that the velocity peaks at different times corresponding to syn\ae{}resis and to the respective growths of the primary, secondary and tertiary patterns. We associate each growth with a characteristic time $\tau = A_\text{max}/v_\text{max}$. For example, in the present case the $\tau$ corresponding to the primary pattern is $\SI{123}{\second}$.
 
 Therefore contrary to observations in, e.g., Ref~\cite{Yoo2003}, we do not report any coarsening of the patterns. We believe that the wrinkling pattern is stable against coarsening because of the bending rigidity of the gel~\cite{LeGoff2014}. Indeed when the amplitude saturates the gel flattens against the walls which creates sharp edges. To accommodate those sharp edges with finite bending rigidity, the flat part of the gel actually ripples, see Supplementary Figure~\ref{fig:ripples}. The ripples created by opposite sides of a same flat patch interfere, creating barriers against coarsening~\cite{LeGoff2014}.
 
@@ -128,7 +128,7 @@ Therefore at this stage, our observations still raise two unresolved issues whic
 
 The syn\ae{}resis and swelling back mechanism depends on (i)~the pH sensitivity of caseins, (ii)~the route to gelation, (iii)~the gel properties and (iv)~the boundary conditions.
 
-The stability of casein dispersions strongly depends on the pH. Supplementary Video~\ref{vid:titration} shows the titration of a casein dispersion at 4\%w by 1 molar HCl. At pH=7, the caseins are well dispersed then they flocculate between pH=5.5 to 4 and finally at pH=3 the solution becomes clearer as caseins partially redisperse. The state diagram of caseins as a function of pH is thus related to charge stabilisation. At neutral pH caseins are charged negatively and repel each other. As the pH decreases to the isoelectric point of the caseins (pH$\approx 4.6$), casein molecules lose their negative net charge and tend to stick to each other~\cite{Roefs1986,Bremer1989,Lucey1998,Dickinson2002}. Beyond the isoelectric point caseins acquire a positive net charge and therefore partially re-dissolve. In the inset of Figure~\ref{fig:acidification}b, we quantify this effect and measure with UV absorption spectroscopy the amount of free caseins within the 4\%w dispersion as a function of pH, see Supplementary Methods. Starting at pH=6.8 all the casein molecules are well dispersed and the free casein fraction $x_\text{free}$ is 1. Upon decreasing the pH to the isolectric point the free casein fraction drops to almost 0: almost all the casein molecules are aggregated. Further decrease of the pH of the solution leads to a partial redissolution of the casein aggregates. At pH=2 the fraction of free casein is 0.35.
+The stability of casein dispersions strongly depends on the pH. Supplementary Video~\ref{vid:titration} shows the titration of a casein dispersion at 4\%w by 1 molar HCl. At pH=7, the caseins are well dispersed then they flocculate between pH=5.5 to 4 and finally at pH=3 the solution becomes clearer as caseins partially redisperse. The state diagram of caseins as a function of pH is thus related to charge stabilisation. At neutral pH caseins are charged negatively and repel each other. As the pH decreases to the isoelectric point of the caseins (pH$\approx 4.6$), casein molecules lose their negative net charge and tend to stick to each other~\cite{Roefs1986,Bremer1989,Lucey1998,Dickinson2002}. Beyond the isoelectric point caseins acquire a positive net charge and therefore partially re-dissolve. In the inset of Figure~\ref{fig:acidification}b, we quantify this effect and measure with UV absorption spectroscopy the amount of free caseins within the 4\%w dispersion as a function of pH, see Supplementary Materials. Starting at pH=6.8 all the casein molecules are well dispersed and the free casein fraction $x_\text{free}$ is 1. Upon decreasing the pH to the isolectric point the free casein fraction drops to almost 0: almost all the casein molecules are aggregated. Further decrease of the pH of the solution leads to a partial redissolution of the casein aggregates. At pH=2 the fraction of free casein is 0.35.
 
 %On the Stability of Casein Micelles, Pieter Walstra J. of dairy science 1990
 
@@ -138,10 +138,10 @@ We monitor the GDL-induced gelation with a rheometer in cone-plate geometry. As 
 
 To gain further insight into the mechanical properties of the gel we turn to microstructural observations under confocal microscopy. As shown in Supplementary Videos~\ref{vid:stick63} and \ref{vid:nostick63} and in Supplementary Figure~\ref{fig:nonmonotonic} the gel consists in a space-spanning fractal network with a cut-off length scale $\xi$ that corresponds to the maximum pore size~\cite{VanDijk1986}. Permeability $\alpha$ is of the order of \SI{67000}{\square\nano\metre}, see Supplementary Figure~\ref{fig:permeability}. The fractal model fits the structure at all times but its parameters vary non monotonously during GDL acidification. As shown in Figure~\ref{fig:acidification}d and Supplementary Figure~\ref{fig:nonmonotonic}, when reaching the isolectric point $\xi$ increases up to a maximum length of \SI{7}{\micro\metre} due to the solvent expulsion out of the casein network~\cite{Lucey1998} like in viscoelastic phase separation~\cite{Tanaka2000h}. This corresponds to a tighter packing of the caseins within the network strands. Such stiffening of the strands explains the observed increase of elasticity. Beyond the isoelectric point caseins partially regain solubility, the packing within the strands loosens which results in weaker, thicker strands and smaller pores as $\xi$ decreases down to \SI{4}{\micro\metre}, hence the long-term decrease of the elastic modulus.
 
-Boundary conditions is the final parameter that is essential to form wrinkled patterns. In order to turn off the adsorption of the caseins on a surface, we coat the surface with polymer brushes, see Methods, effectively creating non adhesive boundary conditions for the gel. When the casein adhesion to the upper boundary is turned off, the gel still not wrinkles because it remains attached to the bottom wall, but it detaches from the top wall. In this situation we can monitor $\xi$, Figure~\ref{fig:acidification}d. $\xi$ remains mostly constant and variations manifests themselves at the macroscopic level, on the volume occupied by the gel.
+Boundary conditions is the final parameter that is essential to form wrinkled patterns. In order to turn off the adsorption of the caseins on a surface, we coat the surface with polymer brushes, see Materials and Methods, effectively creating non adhesive boundary conditions for the gel. When the casein adhesion to the upper boundary is turned off, the gel still not wrinkles because it remains attached to the bottom wall, but it detaches from the top wall. In this situation we can monitor $\xi$, Figure~\ref{fig:acidification}d. $\xi$ remains mostly constant and variations manifests themselves at the macroscopic level, on the volume occupied by the gel.
 
 
-Therefore, the syn\ae{}resis and swelling back mechanism is related to charge stabilisation of the casein proteins as function of the pH. Such a mechanism is only effective to produce wrinkles when adhesion of the caseins to both top and bottom walls is turned off. Consistently with our explanation, the amount of GDL, and thus the final pH reached by the suspension, controls the amount of swelling back. Therefore at low GDL concentrations we only observe the primary pattern, at high GDL concentrations we observe the formation of higher order patterns.
+Therefore, the syn\ae{}resis and swelling back mechanism is related to charge stabilisation of the casein proteins as function of the pH. Such a mechanism is only effective to produce wrinkles when adhesion of the caseins to both top and bottom walls is turned off. Consistently with our explanation, the amount of GDL, and thus the final pH reached by the suspension, controls the amount of swelling back. Thus at low GDL concentrations we only observe the primary pattern, at high GDL concentrations we observe the formation of higher order patterns.
 
 
 
@@ -191,7 +191,7 @@ The opposite limiting case is when an impermeable ($\alpha\rightarrow 0$) gel fi
 where we recognise the scaling for the wrinkles of an elastic film on a thin ($H\ll\lambda$) elastic substrate~\cite{Cerda2003} where $\Upsilon$ would be the ratio between the flexural modulus of the film and that of the substrate. Indeed within the lubrication approximation or at low Reynolds numbers one can consider a viscous film as elastic with effective Young modulus $3\eta/\tau$~\cite{Biot1957,Boudaoud2001}.
 
 
-A more complete derivation of the models can be found in the Supplementary Methods and yields the following prefactors:
+A more complete derivation of the models can be found in the Supplementary Materials and yields the following prefactors:
 \begin{align}
 \lambda_D &= 2\pi h^{1/2}\alpha^{1/4}\left(\frac{\Upsilon}{12}\right)^{1/4}\label{eq:prefDarcy}\\
 \lambda_P &= \pi (hH)^{1/2}\left(\frac{2}{9}\Upsilon\right)^{1/6}\label{eq:prefPoiseuille}
@@ -204,18 +204,18 @@ To sum up, we expect two regimes of viscosity-dominated wrinkling: for $H\ll H^*
 
 \subsection*{Experimental tests}
 
-For a typical gel sheet, the buoyancy after syn\ae{}resis is estimated from the initial sodium caseinate mass concentration $C_\text{cas}$ as $\Delta\rho=C_\text{cas} e/h = \SI{130}{\kilo\gram\per\cubic\metre}$ leading to a gravity stress $\sigma_\perp^G \approx \SI{0.04}{\pascal}$. This is much lower than typical Darcy or Poiseuille stresses $\sigma_\perp^D \approx \sigma_\perp^P \approx \SI{0.15}{\pascal}$ which confirms that gravity can be neglected as already inferred from test experiments where the cell is held vertically rather than horizontally.
+For a typical gel film, the buoyancy after syn\ae{}resis is estimated from the initial sodium caseinate mass concentration $C_\text{cas}$ as $\Delta\rho=C_\text{cas} e/h = \SI{130}{\kilo\gram\per\cubic\metre}$ leading to a gravity stress $\sigma_\perp^G \approx \SI{0.04}{\pascal}$. This is much lower than typical Darcy or Poiseuille stresses $\sigma_\perp^D \approx \sigma_\perp^P \approx \SI{0.15}{\pascal}$ which confirms that gravity can be neglected as already inferred from test experiments where the cell is held vertically rather than horizontally.
 
 
-Darcy and Poiseuille models yield wavelengths that are of the same order in most of the cases under study. Thus only systematic measurements of the experimental $\lambda$ together with estimates for all the parameters involved in either model shall allow one to discriminate between them, see Supplementary Methods about such measurements. As summarised in Supplementary Table~\ref{tab:data} we systematically vary (i) the thickness of the cell, impacting $h$ and the maximal amplitude, (ii) the gel composition and thus both its stiffness and its permeability, (iii) the viscosity of the solvent by adding glycerol, which also impacts the gel stiffness, permeability and $\tau$. Finally, the only parameter that we have no control upon is the initial altitude $H$ of the gel before wrinkling that varies randomly. 
+Darcy and Poiseuille models yield wavelengths that are of the same order in most of the cases under study. Thus only systematic measurements of the experimental $\lambda$ together with estimates for all the parameters involved in either model shall allow one to discriminate between them, see Supplementary Materials about such measurements. As summarised in Supplementary Table~\ref{tab:data} we systematically vary (i) the thickness of the cell, impacting $h$ and the maximal amplitude, (ii) the gel composition and thus both its stiffness and its permeability, (iii) the viscosity of the solvent by adding glycerol, which also impacts the gel stiffness, permeability and $\tau$. Finally, the only parameter that we have no control upon is the initial altitude $H$ of the gel before wrinkling that varies randomly. 
 
-For each experiment we measure independently $\lambda$ and all the parameters that go into the expressions of $\lambda_D$, Equation~(\ref{eq:prefDarcy}) and $\lambda_P$, Equation~(\ref{eq:prefPoiseuille}). $\lambda$ is measured by optical microscopy; $e$, $h$, $H_1$, $H_2$, $\tau$ are measured by confocal microscopy; $\alpha$ is measured via capillary experiment and $B$ by rheology, see Methods and Supplementary methods.
+For each experiment we measure independently $\lambda$ and all the parameters that go into the expressions of $\lambda_D$, Equation~(\ref{eq:prefDarcy}) and $\lambda_P$, Equation~(\ref{eq:prefPoiseuille}). $\lambda$ is measured by optical microscopy; $e$, $h$, $H_1$, $H_2$, $\tau$ are measured by confocal microscopy; $\alpha$ is measured via capillary experiment and $B$ by rheology, see Materials and Methods and Supplementary Materials.
 
 
 The beauty of this approach is that it is not only valid to model the primary wavelength, but that it describes also the growth of the secondary pattern. Although the wavelength $\lambda_2$ of the secondary pattern is fully determined by the primary pattern $\lambda_2 = \lambda_1/2$, Figure~\ref{fig:dynamics} and Supplementary Figure~\ref{fig:generations}, the secondary pattern has its own dynamics with its own characteristic time $\tau_2\neq\tau_1$. Since the saturation of the primary pattern flattens the gel on the top and bottom walls, the secondary blisters always appear in a Darcy situation ($H\ll H^*$). Therefore, we are able to obtain more data at small $H/H^*$ ratios by considering not only the primary patterns but also the secondary ones.
 
 
-Despite changing the gel properties and the cell geometry we always observe wrinkling proving the robustness of this approach to form wrinkling patterns. We are in the position to vary $H/H^\star$ from 0.1 to 10 so that we can test the crossover between Darcy and Poiseuille mechanism. In Figure~\ref{fig:DarcyPoiseuille}a and \ref{fig:DarcyPoiseuille}b we have plotted the measured wavelength as a function of the model prediction $\lambda_D$ and $\lambda_P$ respectively. If the predictions are correct we expect $\lambda_\text{exp}=\lambda_D$ when $H<H^*$ and $\lambda_\text{exp}=\lambda_P$ when $H>H^*$. Indeed, both model seems to apply in their domain of validity. The failure of the Poiseuille model is only visible at small wavelengths where an unexplained offset (dashed line in Figure~\ref{fig:DarcyPoiseuille}b) is necessary to fit the data correctly. To go further, we derive a complete model summing up the influence of both Poiseuille and Darcy dissipation, see Supplementary Methods. The results of this mixed model are displayed in Figure~\ref{fig:DarcyPoiseuille}c and agree with $\lambda_\text{exp}$ over the whole $H/H^*$ range.
+Despite changing the gel properties and the cell geometry we always observe wrinkling proving the robustness of this approach to form wrinkling patterns. We are in the position to vary $H/H^\star$ from 0.1 to 10 so that we can test the crossover between Darcy and Poiseuille mechanism. In Figure~\ref{fig:DarcyPoiseuille}a and \ref{fig:DarcyPoiseuille}b we have plotted the measured wavelength as a function of the model prediction $\lambda_D$ and $\lambda_P$ respectively. If the predictions are correct we expect $\lambda_\text{exp}=\lambda_D$ when $H<H^*$ and $\lambda_\text{exp}=\lambda_P$ when $H>H^*$. Indeed, both model seems to apply in their domain of validity. The failure of the Poiseuille model is only visible at small wavelengths where an unexplained offset (dashed line in Figure~\ref{fig:DarcyPoiseuille}b) is necessary to fit the data correctly. To go further, we derive a complete model summing up the influence of both Poiseuille and Darcy dissipation, see Supplementary Materials. The results of this mixed model are displayed in Figure~\ref{fig:DarcyPoiseuille}c and agree with $\lambda_\text{exp}$ over the whole $H/H^*$ range.
 
 \section*{Conclusion}
 
